# agentloopframework

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
agentloop/: __init__.py  agent.py  events.py  loop.py  memory.py  tools.py  types.py
agentloop/providers/: __init__.py  base.py  mock.py  openai_compatible.py
deploy/cloud-run/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
deploy/cloud-run/api/: agent_factory.py  main.py  rag.py  sessions.py
deploy/cloud-run/scripts/: ingest.py
deploy/cloud-run/ui/: index.html  package.json  vite.config.js
deploy/cloud-run/ui/src/: App.css  App.jsx  api.js
examples/: README.md  basic_mock.py  chatbot.py  custom_provider.py  helpers.py  openai_agent.py  voice_agent.py
tests/: test_loop.py
