[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI name (import is still `agentloop`). "agentloop" is taken on PyPI by another project.
name = "agentloop-framework"
version = "0.1.0"
description = "A minimal, reusable Python framework for building LLM agents with tools and an observe-act loop."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "agentloop contributors" }]
keywords = ["agent", "llm", "tools", "agentic", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
openai = ["httpx>=0.27.0"]
voice = ["SpeechRecognition>=3.10.0", "pyttsx3>=2.90"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0"]
examples = ["httpx>=0.27.0", "SpeechRecognition>=3.10.0", "pyttsx3>=2.90"]

[project.urls]
Homepage = "https://github.com/urwithdhanu-design/agentloopframework"
Documentation = "https://github.com/urwithdhanu-design/agentloopframework#readme"

[tool.hatch.build.targets.wheel]
packages = ["agentloop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
